--- a/c5.md
+++ b/c5.md
@@ -276,6 +276,6 @@ _**NOTE:** We really cannot give you precise instructions here; things change t
 
 ---
 
-![Logo](/resources/068.png "Logo")
+![Logo](/resources/068.jpg "Logo")
 
 ---
